--- a/website.html
+++ b/website.html
@@ -338,7 +338,7 @@
   <button onclick="scrollToSection('praxis1-ctmf1')">CTMF 1</button>
   <button onclick="scrollToSection('praxis1-ctmf2')">CTMF 2</button>
   <button onclick="scrollToSection('praxis1-ctmf3')">CTMF 3</button>
-  <button onclick="scrollToSection('praxis1-takeaways')">Key Takeaways</button>
+  <button onclick="scrollToSection('praxis1-takeaways')">Final Takeaways</button>
   </div>
   <div id="praxis1-overview" class="section-container fade-section">
   <h2>Design Solution: Air Pump Chair Stabilizer</h2>
@@ -488,7 +488,7 @@
   <button onclick="scrollToSection('civ102-ctmf1')">CTMF 1</button>
   <button onclick="scrollToSection('civ102-ctmf2')">CTMF 2</button>
   <button onclick="scrollToSection('civ102-ctmf3')">CTMF 3</button>
-  <button onclick="scrollToSection('civ102-takeaways')">Key Takeaways</button>
+  <button onclick="scrollToSection('civ102-takeaways')">Final Takeaways</button>
   </div>
   <div id="civ102-overview" class="section-container fade-section">
   <h2>CIV102 One-Pager Summary</h2>
@@ -677,7 +677,7 @@
   <button onclick="scrollToSection('praxis2-ctmf1')">CTMF 1</button>
   <button onclick="scrollToSection('praxis2-ctmf2')">CTMF 2</button>
   <button onclick="scrollToSection('praxis2-ctmf3')">CTMF 3</button>
-  <button onclick="scrollToSection('praxis2-takeaways')">Key Takeaways</button>
+  <button onclick="scrollToSection('praxis2-takeaways')">Final Takeaways</button>
   </div>
   <div id="praxis2-overview" class="section-container fade-section">
   <h2>Design Summary: Bonsai Bloom</h2>
