--- a/website.html
+++ b/website.html
@@ -507,7 +507,7 @@
 
     <div class="image-row">
       <img src="CIV.png" alt="CIV Page 1" />
-      <img src="CIVPager2.png" alt="CIV Page 2" />
+      <img src="CIV2.png" alt="CIV Page 2" />
     </div>
   </div>
   <div id="civ102-ctmf1" class="section-container fade-section">
