--- a/website.html
+++ b/website.html
@@ -835,7 +835,7 @@
 </p>
 
 <p>
-  Through our <strong>primary research</strong> with the Toronto Bonsai Society, I learned the importance of **framing a problem with the user in mind**. We weren't designing for plants — we were designing for beginners. That small shift reframed our entire approach, leading to simpler output methods, clearer feedback, and design requirements that aligned with how users actually behave. It reminded me that engineering isn’t about showing off precision — it’s about making people's lives easier.
+  Through our <strong>primary research</strong> with the Toronto Bonsai Society, I learned the importance of framing a problem with the user in mind. We weren't designing for plants — we were designing for beginners. That small shift reframed our entire approach, leading to simpler output methods, clearer feedback, and design requirements that aligned with how users actually behave. It reminded me that engineering isn’t about showing off precision — it’s about making people's lives easier.
 </p>
 
 <p>
